--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Júlio E Izabela</title>
     <style>
-        body{
+        body {
             display: flex;
             padding: 0;
-            margin-top: 0;
+            margin: 0;
+            height: 100vh;
+            align-items: center;
+            justify-content: center;
+            font-family: Arial, Helvetica, sans-serif;
             background-color: #040f13;
+        }
+
+        .carrossel {
+            position: relative;
+            width: 80%;
+            max-width: 600px;
+            overflow: hidden;
+            border-radius: 10px;
+            box-shadow: 0 0 10px #000;
         }
     </style>
 </head>
@@ -18,9 +31,18 @@
 
     </header>
     <main>
-        <div class="banner-fotos">
-
-        </divb>
+        <div class="carrossel">
+            <button class="bnt-anterior">←</button>
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <button class="btn-proximo">→</button>
+        </div>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
