--- a/index.html
+++ b/index.html
@@ -3,46 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Júlio E Izabela</title>
-    <style>
-        body {
-            display: flex;
-            padding: 0;
-            margin: 0;
-            height: 100vh;
-            align-items: center;
-            justify-content: center;
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: #040f13;
-        }
-
-        .carrossel {
-            position: relative;
-            width: 80%;
-            max-width: 600px;
-            overflow: hidden;
-            border-radius: 10px;
-            box-shadow: 0 0 10px #000;
-        }
-    </style>
+    <title>Julio e Izabela</title>
+    <link rel="stylesheet" href="src/style.css">
+    <script src="src/script.js" defer></script>
 </head>
 <body>
-    <header>
-
-    </header>
-    <main>
-        <div class="carrossel">
-            <button class="bnt-anterior">←</button>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <button class="btn-proximo">→</button>
+    <div class="container-slider">
+        <button id="prev-button"><img src="public/images/arrow.png" alt="prev-button"></button>
+        <div class="container-images">
+            <img src="public/images/img1.jpg" alt="" class="slider on">
+            <img src="public/images/img2.png" alt="" class="slider">
+            <img src="public/images/img3.HEIC" alt="" class="slider">
+            <img src="" alt="" class="slider">
+            <img src="" alt="" class="slider">
+            <img src="" alt="" class="slider">
+            <img src="" alt="" class="slider">
         </div>
-    </main>
-    <script src="script.js"></script>
+        <button id="next-button"><img src="public/images/arrow.png" alt="next-button"></button>
+    </div>
 </body>
 </html>
