--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <div class="container-images">
             <img src="public/images/img1.jpg" alt="" class="slider on">
             <img src="public/images/img2.png" alt="" class="slider">
-            <img src="public/images/img3.HEIC" alt="" class="slider">
-            <img src="" alt="" class="slider">
-            <img src="" alt="" class="slider">
-            <img src="" alt="" class="slider">
-            <img src="" alt="" class="slider">
+            <img src="public/images/img3.jpg" alt="" class="slider">
+            <img src="public/images/img4.jpg" alt="" class="slider">
+            <img src="public/images/img5.jpg" alt="" class="slider">
+            <img src="public/images/img6.jpg" alt="" class="slider">
+            <img src="public/images/img7.jpg" alt="" class="slider">
         </div>
         <button id="next-button"><img src="public/images/arrow.png" alt="next-button"></button>
     </div>
