--- a/index.html
+++ b/index.html
@@ -8,18 +8,24 @@
     <script src="src/script.js" defer></script>
 </head>
 <body>
-    <div class="container-slider">
-        <button id="prev-button"><img src="public/images/arrow.png" alt="prev-button"></button>
-        <div class="container-images">
-            <img src="public/images/img1.jpg" alt="" class="slider on">
-            <img src="public/images/img2.png" alt="" class="slider">
-            <img src="public/images/img3.jpg" alt="" class="slider">
-            <img src="public/images/img4.jpg" alt="" class="slider">
-            <img src="public/images/img5.jpg" alt="" class="slider">
-            <img src="public/images/img6.jpg" alt="" class="slider">
-            <img src="public/images/img7.jpg" alt="" class="slider">
+    <div class="conainer-main">
+        <!--autoplay-->
+        <audio id="song" src="public/media/04 Turning Page.m4a" controls></audio>
+
+        <div class="container-slider">
+            <button id="prev-button"><img src="public/images/arrow.png" alt="prev-button"></button>
+            <div class="container-images">
+                <img src="public/images/img1.jpg" alt="" class="slider on">
+                <img src="public/images/img2.png" alt="" class="slider">
+                <img src="public/images/img3.jpg" alt="" class="slider">
+                <img src="public/images/img4.jpg" alt="" class="slider">
+                <img src="public/images/img5.jpg" alt="" class="slider">
+                <img src="public/images/img6.jpg" alt="" class="slider">
+                <img src="public/images/img7.jpg" alt="" class="slider">
+            </div>
+            <button id="next-button"><img src="public/images/arrow.png" alt="next-button"></button>
         </div>
-        <button id="next-button"><img src="public/images/arrow.png" alt="next-button"></button>
+        <h1>Feliz aniversário de namoro e noivado</h1>
     </div>
 </body>
 </html>
