--- a/index.html
+++ b/index.html
@@ -8,24 +8,33 @@
     <script src="src/script.js" defer></script>
 </head>
 <body>
-    <div class="conainer-main">
-        <!--autoplay-->
-        <audio id="song" src="public/media/04 Turning Page.m4a" controls></audio>
+    <!--autoplay-->
+    <audio id="song" src="public/media/04 Turning Page.m4a" controls></audio>
 
-        <div class="container-slider">
-            <button id="prev-button"><img src="public/images/arrow.png" alt="prev-button"></button>
-            <div class="container-images">
-                <img src="public/images/img1.jpg" alt="" class="slider on">
-                <img src="public/images/img2.png" alt="" class="slider">
-                <img src="public/images/img3.jpg" alt="" class="slider">
-                <img src="public/images/img4.jpg" alt="" class="slider">
-                <img src="public/images/img5.jpg" alt="" class="slider">
-                <img src="public/images/img6.jpg" alt="" class="slider">
-                <img src="public/images/img7.jpg" alt="" class="slider">
-            </div>
-            <button id="next-button"><img src="public/images/arrow.png" alt="next-button"></button>
+    <div class="container-slider">
+        <button id="prev-button"><img src="public/images/arrow.png" alt="prev-button"></button>
+        <div class="container-images">
+            <img src="public/images/img1.jpg" alt="" class="slider on">
+            <img src="public/images/img2.png" alt="" class="slider">
+            <img src="public/images/img3.jpg" alt="" class="slider">
+            <img src="public/images/img4.jpg" alt="" class="slider">
+            <img src="public/images/img5.jpg" alt="" class="slider">
+            <img src="public/images/img6.jpg" alt="" class="slider">
+            <img src="public/images/img7.jpg" alt="" class="slider">
         </div>
-        <h1>Feliz aniversário de namoro e noivado</h1>
+        <button id="next-button"><img src="public/images/arrow.png" alt="next-button"></button>
+
+        <div class="texto">
+            <h1>Feliz aniversário de namoro e noivado &#x2764</h1>
+            <br>
+            <h2>Fazem 3 anos que eu sou o cara mais feliz do mundo e 1 ano que tomei a melhor decisão da minha vida que foi pedir você em casamento</h2>
+            <br>
+            <hr>
+            <br>
+            <p>
+                Obrigado por todos os dias me mostrar o amor verdadeiro e o quanto issso é poderoso, me sinto um homem melhor ao seu lado e para você e e nossa família farei o possível e o impossível para sempre honrar o que estamos construindo. Te amo pra sempre meu amor &#x1F60D &#x2764
+            </p>
+        </div>
     </div>
 </body>
 </html>
