quase mais um pouco

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!--autoplay-->
-    <audio id="song" src="public/media/04 Turning Page.m4a" controls></audio>
+    <audio id="song" src="public/media/04 Turning Page.m4a" autoplay controls></audio>
 
     <div class="container-slider">
         <button id="prev-button"><img src="public/images/arrow.png" alt="prev-button"></button>
@@ -29,7 +29,7 @@
             <br>
             <h2>Fazem 3 anos que eu sou o cara mais feliz do mundo e 1 ano que tomei a melhor decisão da minha vida que foi pedir você em casamento</h2>
             <br>
-            <hr>
+            <hr id="row-hehe">
             <br>
             <p>
                 Obrigado por todos os dias me mostrar o amor verdadeiro e o quanto issso é poderoso, me sinto um homem melhor ao seu lado e para você e e nossa família farei o possível e o impossível para sempre honrar o que estamos construindo. Te amo pra sempre meu amor &#x1F60D &#x2764
