--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <!--autoplay-->
-    <audio id="song" src="public/media/04 Turning Page.m4a" autoplay controls></audio>
+    <div class="container-audio">
+        <audio id="song" src="public/media/04 Turning Page.m4a" autoplay controls></audio>
+    </div>
 
     <div class="container-slider">
         <button id="prev-button"><img src="public/images/arrow.png" alt="prev-button"></button>
